HEARTH-1267 init check fixed, spacing fixed

--- a/common/styles/_buttons.scss
+++ b/common/styles/_buttons.scss
@@ -60,6 +60,10 @@ a.button {
     }
   }
 
+  .button-group & {
+    margin-bottom: 0;
+  }
+
   .button-group.large &,
   &.large {
     padding: 1.5em 1em;
